--- a/k8s/deployment/celery.yaml
+++ b/k8s/deployment/celery.yaml
@@ -7,7 +7,7 @@ metadata:
   name: celery
   namespace: airflow
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       run: celery
@@ -29,12 +29,12 @@ spec:
           value: CeleryExecutor
         - name: AIRFLOW__CORE__DAGS_FOLDER
           value: "{AIRFLOW_HOME}/dags"
+        - name: AIRFLOW__CELERY__WORKER_CONCURRENCY
+          value: "10"
         - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
           value: mysql://root:toor@result-backend:3306/airflow
-        - name: AIRFLOW__CELERY__WORKER_CONCURRENCY
-          value: "5"
         - name: AIRFLOW__CELERY__RESULT_BACKEND
-          value: mysql://root:toor@result-backend:3306/airflow
+          value: db+mysql://root:toor@result-backend:3306/airflow
         - name: AIRFLOW__CELERY__BROKER_URL
           value: redis://broker:6379/1
         command: ['sh', '-c', 'airflow worker']
@@ -44,5 +44,5 @@ spec:
           command: ['sh', '-c', 'until mysqladmin ping -h $RESULT_BACKEND_ADDRESS -u root --password=toor; do echo Waiting for result backend to start; sleep 1; done;']
           env:
             - name: RESULT_BACKEND_ADDRESS
-              value: resut-backend
+              value: "result-backend"
 status: {}
