--- a/src/celery/deployment.yaml
+++ b/src/celery/deployment.yaml
@@ -36,6 +36,8 @@ spec:
         - name: AIRFLOW__CELERY__BROKER_URL
           value: redis://broker:6379/1
         command: ['sh', '-c', 'airflow worker']
+        ports:
+          - containerPort: 8793
       initContainers:
         - image: mysql:5.7
           name: backend-liveness-check
