--- a/src/airflow/deployment.yaml
+++ b/src/airflow/deployment.yaml
@@ -30,18 +30,20 @@ spec:
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 5
-        env:
-        - name: AIRFLOW__CORE__EXECUTOR
-          value: CeleryExecutor
-        - name: AIRFLOW__CORE__DAGS_FOLDER
-          value: "{AIRFLOW_HOME}/dags"
-        - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
-          value: "mysql://root:toor@result-backend:3306/airflow"
-        - name: AIRFLOW__CELERY__RESULT_BACKEND
-          value: db+mysql://root:toor@result-backend:3306/airflow
-        - name: AIRFLOW__CELERY__BROKER_URL
-          value: redis://broker:6379/1
-        command: ['sh', '-c', 'airflow upgradedb; airflow users -c --username root --password toor --email root@root --role Admin --firstname root --lastname root; airflow scheduler & airflow webserver']
+        command:
+          - bash
+          - -c
+          - 'env; airflow upgradedb; airflow users -c --username root --password toor --email root@root --role Admin --firstname root --lastname root; airflow scheduler & airflow webserver'
+        # volumeMounts:
+        #   - readOnly: true
+        #     name: airflow-cfg
+        #     mountPath: /home/airflow/airflow/airflow.cfg
+        #     subPath: airflow.cfg
+        envFrom:
+        - configMapRef:
+            name: airflow-env
+        - secretRef:
+            name: airflow-secrets
       initContainers:
         - image: mysql:5.7
           name: backend-liveness-check
@@ -49,4 +51,9 @@ spec:
           env:
             - name: RESULT_BACKEND_ADDRESS
               value: "result-backend"
+      volumes:
+        - name: airflow-cfg
+          configMap:
+            name: airflow-cfg
+      serviceAccountName: airflow
 status: {}
