--- a/src/airflow/env.cm.yaml
+++ b/src/airflow/env.cm.yaml
@@ -10,6 +10,8 @@ data:
   AIRFLOW__KUBERNETES__GIT_SUBPATH: dags
   AIRFLOW__KUBERNETES__GIT_DAGS_FOLDER_MOUNT_POINT: "{AIRFLOW_HOME}/dags"
   AIRFLOW__KUBERNETES__WORKER_SERVICE_ACCOUNT_NAME: airflow
+  AIRFLOW__KUBERNETES__DAGS_VOLUME_CLAIM: airflow-dags
+  AIRFLOW__KUBERNETES__LOGS_VOLUME_CLAIM: airflow-logs
 kind: ConfigMap
 metadata:
   creationTimestamp: null
