--- a/src/airflow/env.cm.yaml
+++ b/src/airflow/env.cm.yaml
@@ -1,17 +1,22 @@
 apiVersion: v1
 data:
-  AIRFLOW__CORE__EXECUTOR: KubernetesExecutor
-  AIRFLOW__CORE__DAGS_FOLDER: "{AIRFLOW_HOME}/dags"
+  AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+  AIRFLOW__CORE__DAGS_FOLDER: "/home/airflow/airflow/dags"
   AIRFLOW__CORE__SQL_ALCHEMY_CONN: "mysql://root:toor@result-backend:3306/airflow"
   AIRFLOW__CELERY__RESULT_BACKEND: db+mysql://root:toor@result-backend:3306/airflow
   AIRFLOW__CELERY__BROKER_URL: redis://broker:6379/1
   AIRFLOW__KUBERNETES__NAMESPACE: airflow
   AIRLFOW__KUBERNETES__AIRFLOW_CONFIGMAP: airflow-cfg
-  AIRFLOW__KUBERNETES__GIT_SUBPATH: dags
-  AIRFLOW__KUBERNETES__GIT_DAGS_FOLDER_MOUNT_POINT: "{AIRFLOW_HOME}/dags"
   AIRFLOW__KUBERNETES__WORKER_SERVICE_ACCOUNT_NAME: airflow
-  AIRFLOW__KUBERNETES__DAGS_VOLUME_CLAIM: airflow-dags
-  AIRFLOW__KUBERNETES__LOGS_VOLUME_CLAIM: airflow-logs
+  AIRFLOW__KUBERNETES__ENV_FROM_CONFIGMAP_REF: airflow-env
+  AIRFLOW__KUBERNETES__ENV_FROM_SECRET_REF: airflow-secrets
+
+  # AIRFLOW__KUBERNETES__DAGS_VOLUME_CLAIM: airflow-dags
+  # AIRFLOW__KUBERNETES__LOGS_VOLUME_CLAIM: airflow-logs
+  # AIRFLOW__KUBERNETES__GIT_SUBPATH: dags
+  # AIRFLOW__KUBERNETES__GIT_DAGS_FOLDER_MOUNT_POINT: "/home/airflow/airflow/dags"
+  # AIRFLOW__KUBERNETES__GIT_SYNC_ROOT: "/git"
+  # AIRFLOW__KUBERNETES__GIT_SYNC_DEST: "/home/airflow/airflow/dags"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
