--- a/src/prometheus_operator/service_monitor.yaml
+++ b/src/prometheus_operator/service_monitor.yaml
@@ -10,5 +10,20 @@ spec:
   selector:
     matchLabels:
       app: airflow
+  namespaceSelector:
+    matchNames:
+    - airflow
+  # endpoints:
+  # - honorLabels: true
+    # port: http
   endpoints: 
   - port: airflow-http
+    interval: 5s
+    path: admin/metrics/
+    basicAuth: 
+      user:
+        key: user
+        name: airflow-auth
+      password:
+        key: password
+        name: airflow-auth
