--- a/src/prometheus_operator/svc.yaml
+++ b/src/prometheus_operator/svc.yaml
@@ -1,13 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
+    app.kubernetes.io/version: v0.31.1
+  name: prometheus-operator
+  namespace: airflow
 spec:
-  type: LoadBalancer
+  clusterIP: None
   ports:
-  - name: web
-    port: 9090
-    protocol: TCP
-    targetPort: web
+  - name: airflow-http
+    port: 8080
+    targetPort: airflow-http
   selector:
-    prometheus: prometheus
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
