--- a/src/prometheus/crd.clusterroles.yaml
+++ b/src/prometheus/crd.clusterroles.yaml
@@ -62,3 +62,40 @@ subjects:
 - kind: ServiceAccount
   name: prometheus-operator
   namespace: airflow
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
+    app.kubernetes.io/version: v0.31.1
+  name: prometheus-operator-4
+  namespace: airflow
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: prometheus-crd-view
+subjects:
+- kind: ServiceAccount
+  name: prometheus
+  namespace: airflow
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  labels:
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
+    app.kubernetes.io/version: v0.31.1
+  name: prometheus-operator-5
+  namespace: airflow
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: prometheus-crd-edit
+subjects:
+- kind: ServiceAccount
+  name: prometheus
+  namespace: airflow
