--- a/src/prometheus_operator/svc.yaml
+++ b/src/prometheus_operator/svc.yaml
@@ -10,9 +10,9 @@ metadata:
 spec:
   clusterIP: None
   ports:
-  - name: airflow-http
+  - name: http
     port: 8080
-    targetPort: airflow-http
+    targetPort: http
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: prometheus-operator
