--- a/src/airflow/svc.yaml
+++ b/src/airflow/svc.yaml
@@ -4,6 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: airflow
+    run: airflow
   name: airflow
   namespace: airflow
 spec:
@@ -11,7 +12,7 @@ spec:
   - name: airflow-http
     port: 8080
     protocol: TCP
-    targetPort: 8080
+    targetPort: airflow-http
   selector:
     run: airflow
   type: LoadBalancer
