Add prometheus-adapter & custom-metrics ns

--- a/src/airflow/env.cm.yaml
+++ b/src/airflow/env.cm.yaml
@@ -3,8 +3,12 @@ data:
   AIRFLOW__CORE__EXECUTOR: CeleryExecutor
   AIRFLOW__CORE__DAGS_FOLDER: "/home/airflow/airflow/dags"
   AIRFLOW__CORE__SQL_ALCHEMY_CONN: "mysql://root:toor@result-backend:3306/airflow"
+  AIRFLOW__CORE__PARALLELISM: "32"
+
   AIRFLOW__CELERY__RESULT_BACKEND: db+mysql://root:toor@result-backend:3306/airflow
   AIRFLOW__CELERY__BROKER_URL: redis://broker:6379/1
+  AIRFLOW__CELERY__WORKER_CONCURRENCY: "10"
+
   AIRFLOW__KUBERNETES__NAMESPACE: airflow
   AIRLFOW__KUBERNETES__AIRFLOW_CONFIGMAP: airflow-cfg
   AIRFLOW__KUBERNETES__WORKER_SERVICE_ACCOUNT_NAME: airflow
