Update reader rbac role & custom metrics & ssl cm

--- a/src/prometheus-adapter/custom-metrics-config-map.yaml
+++ b/src/prometheus-adapter/custom-metrics-config-map.yaml
@@ -8,7 +8,8 @@ data:
     rules:
     - seriesQuery: 'airflow_dag_status{status="running"}'
       metricsQuery: 'sum(<<.Series>>{<<.LabelMatchers>>})'
-
+    resourceRules:
+      window: 5s
 
     # - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
     #   seriesFilters: []
