--- a/src/prometheus-adapter/custom-metrics-config-map.yaml
+++ b/src/prometheus-adapter/custom-metrics-config-map.yaml
@@ -6,98 +6,100 @@ metadata:
 data:
   config.yaml: |
     rules:
-    - seriesQuery: 'airflow_dag_status{status="running"}'
-      metricsQuery: 'sum(<<.Series>>{<<.LabelMatchers>>})'
+    - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
+      seriesFilters: []
+      resources:
+        overrides:
+          namespace:
+            resource: namespace
+          pod_name:
+            resource: pod
+      name:
+        matches: ^container_(.*)_seconds_total$
+        as: ""
+      metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}[1m])) by (<<.GroupBy>>)
+    - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
+      seriesFilters:
+      - isNot: ^container_.*_seconds_total$
+      resources:
+        overrides:
+          namespace:
+            resource: namespace
+          pod_name:
+            resource: pod
+      name:
+        matches: ^container_(.*)_total$
+        as: ""
+      metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}[1m])) by (<<.GroupBy>>)
+    - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
+      seriesFilters:
+      - isNot: ^container_.*_total$
+      resources:
+        overrides:
+          namespace:
+            resource: namespace
+          pod_name:
+            resource: pod
+      name:
+        matches: ^container_(.*)$
+        as: ""
+      metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}) by (<<.GroupBy>>)
+    - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
+      seriesFilters:
+      - isNot: .*_total$
+      resources:
+        template: <<.Resource>>
+      name:
+        matches: ""
+        as: ""
+      metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>}) by (<<.GroupBy>>)
+    - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
+      seriesFilters:
+      - isNot: .*_seconds_total
+      resources:
+        template: <<.Resource>>
+      name:
+        matches: ^(.*)_total$
+        as: ""
+      metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
+    - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
+      seriesFilters: []
+      resources:
+        template: <<.Resource>>
+      name:
+        matches: ^(.*)_seconds_total$
+        as: ""
+      metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
     resourceRules:
-      window: 5s
-
-    # - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
-    #   seriesFilters: []
-    #   resources:
-    #     overrides:
-    #       namespace:
-    #         resource: namespace
-    #       pod_name:
-    #         resource: pod
-    #   name:
-    #     matches: ^container_(.*)_seconds_total$
-    #     as: ""
-    #   metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}[1m])) by (<<.GroupBy>>)
-    # - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
-    #   seriesFilters:
-    #   - isNot: ^container_.*_seconds_total$
-    #   resources:
-    #     overrides:
-    #       namespace:
-    #         resource: namespace
-    #       pod_name:
-    #         resource: pod
-    #   name:
-    #     matches: ^container_(.*)_total$
-    #     as: ""
-    #   metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}[1m])) by (<<.GroupBy>>)
-    # - seriesQuery: '{__name__=~"^container_.*",container_name!="POD",namespace!="",pod_name!=""}'
-    #   seriesFilters:
-    #   - isNot: ^container_.*_total$
-    #   resources:
-    #     overrides:
-    #       namespace:
-    #         resource: namespace
-    #       pod_name:
-    #         resource: pod
-    #   name:
-    #     matches: ^container_(.*)$
-    #     as: ""
-    #   metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>,container_name!="POD"}) by (<<.GroupBy>>)
-    # - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
-    #   seriesFilters:
-    #   - isNot: .*_total$
-    #   resources:
-    #     template: <<.Resource>>
-    #   name:
-    #     matches: ""
-    #     as: ""
-    #   metricsQuery: sum(<<.Series>>{<<.LabelMatchers>>}) by (<<.GroupBy>>)
-    # - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
-    #   seriesFilters:
-    #   - isNot: .*_seconds_total
-    #   resources:
-    #     template: <<.Resource>>
-    #   name:
-    #     matches: ^(.*)_total$
-    #     as: ""
-    #   metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
-    # - seriesQuery: '{namespace!="",__name__!~"^container_.*"}'
-    #   seriesFilters: []
-    #   resources:
-    #     template: <<.Resource>>
-    #   name:
-    #     matches: ^(.*)_seconds_total$
-    #     as: ""
-    #   metricsQuery: sum(rate(<<.Series>>{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
+      cpu:
+        containerQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
+        nodeQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>, id='/'}[1m])) by (<<.GroupBy>>)
+        resources:
+          overrides:
+            instance:
+              resource: node
+            namespace:
+              resource: namespace
+            pod_name:
+              resource: pod
+        containerLabel: container_name
+      memory:
+        containerQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>}) by (<<.GroupBy>>)
+        nodeQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>,id='/'}) by (<<.GroupBy>>)
+        resources:
+          overrides:
+            instance:
+              resource: node
+            namespace:
+              resource: namespace
+            pod_name:
+              resource: pod
+        containerLabel: container_name
+      window: 1m
+    # - seriesQuery: 'airflow_dag_status'
+    #   metricsQuery: 'sum(<<.Series>>{status="running"})'
+    #   # name:
+    #     # matches: 'airflow_dag_status_running_total'
+    #     # as: ""
     # resourceRules:
-    #   cpu:
-    #     containerQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>}[1m])) by (<<.GroupBy>>)
-    #     nodeQuery: sum(rate(container_cpu_usage_seconds_total{<<.LabelMatchers>>, id='/'}[1m])) by (<<.GroupBy>>)
-    #     resources:
-    #       overrides:
-    #         instance:
-    #           resource: node
-    #         namespace:
-    #           resource: namespace
-    #         pod_name:
-    #           resource: pod
-    #     containerLabel: container_name
-    #   memory:
-    #     containerQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>}) by (<<.GroupBy>>)
-    #     nodeQuery: sum(container_memory_working_set_bytes{<<.LabelMatchers>>,id='/'}) by (<<.GroupBy>>)
-    #     resources:
-    #       overrides:
-    #         instance:
-    #           resource: node
-    #         namespace:
-    #           resource: namespace
-    #         pod_name:
-    #           resource: pod
-    #     containerLabel: container_name
-    #   window: 1m
+    #   window: 5s
