--- a/src/celery/statefulset.yaml
+++ b/src/celery/statefulset.yaml
@@ -19,6 +19,14 @@ spec:
         run: celery
     spec:
       containers:
+      - image: tomwilkie/git-sync
+        name: git-sync
+        envFrom:
+        - secretRef:
+            name: git-sync-secrets
+        volumeMounts:
+          - name: airflow-dags
+            mountPath: /git
       - image: apache/airflow:master
         name: celery
         resources: {}
@@ -30,6 +38,10 @@ spec:
           - name: celery-http
             containerPort: 8793
             protocol: TCP
+        volumeMounts:
+          - name: airflow-dags
+            mountPath: /home/airflow/airflow/dags
+            readOnly: false
       initContainers:
         - image: mysql:5.7
           name: backend-liveness-check
@@ -37,3 +49,7 @@ spec:
           env:
             - name: RESULT_BACKEND_ADDRESS
               value: "result-backend"
+      priorityClassName: celery
+      volumes:
+        - name: airflow-dags
+          emptyDir: {}
