--- a/src/cAdvisor/pc.yaml
+++ b/src/cAdvisor/pc.yaml
@@ -2,8 +2,8 @@ apiVersion: scheduling.k8s.io/v1beta1
 kind: PriorityClass
 metadata:
   creationTimestamp: null
-  name: airflow
-  namespace: airflow
-value: 100
+  name: cadvisor
+  namespace: cadvisor
+value: 50
 globalDefault: false
-description: "Airflow pods priority class"
+description: "Priority of cadvisor pods"
