--- a/src/prometheus_operator/airflow.service_monitor.yaml
+++ b/src/prometheus_operator/airflow.service_monitor.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/version: v0.31.1
     monitors: airflow
+    app: service-monitor
   name: airflow
   namespace: airflow
 spec:
