--- a/src/celery/statefulset.yaml
+++ b/src/celery/statefulset.yaml
@@ -31,7 +31,7 @@ spec:
         name: celery
         resources:
           requests:
-            cpu: "1"
+            cpu: "300m"
             memory: "1024m"
         envFrom:
         - configMapRef:
