Resources requests & limits / PriorityClasses

--- a/src/cAdvisor/Makefile
+++ b/src/cAdvisor/Makefile
@@ -1,7 +1,13 @@
-all: cadvisor
+all: cadvisor service_monitor
 
-cadvisor:
+service_monitor:
+	kubectl apply -f ./service_monitor.yaml
+
+ns:
+	kubectl apply -f ./ns.yaml
+
+cadvisor: ns
 	kustomize build . | kubectl apply -f -
 
 fclean:
-	kubectl delete --all -n cadvisor
+	kubectl delete --all -n cadvisor all
