--- a/src/airflow/deploy.yaml
+++ b/src/airflow/deploy.yaml
@@ -27,12 +27,22 @@ spec:
         volumeMounts:
           - name: airflow-dags
             mountPath: /git
+        resources:
+          requests:
+            memory: 200Mi
+            cpu: 150m
+          limits:
+            memory: 500Mi
+            cpu: 300m
       - image: jjaniec/airflow-exporter
         name: airflow
         resources:
           requests:
             cpu: 0.5
-            memory: "2048m"
+            memory: "512Mi"
+          limits:
+            cpu: 1
+            memory: "2048Mi"
         ports:
           - containerPort: 8080
             name: airflow-http
@@ -40,7 +50,7 @@ spec:
           httpGet:
             path: /api/experimental/test
             port: 8080
-          initialDelaySeconds: 30
+          initialDelaySeconds: 45
           periodSeconds: 5
         command:
           - bash
